Implement Sharing Reader&Writer, Collection Reader&Writer, fix bugs in the definition's reader & writer (#11257)
* Implement Sharing Reader&Writer, Collection Reader&Writer, fix bugs in the definition's reader & writer

* resolve comments

* resolve comments #2

* resolve problems #3

---------

Co-authored-by: kovaIenko <“ruslan.kovalenko-ext@camunda.com”>